fix sidebar horizontal scroll

--- a/css/custome.css
+++ b/css/custome.css
@@ -778,3 +778,7 @@ a[href^="#"] {
     background-color: transparent;
   }
 }
+
+.sidebar{
+  overflow: hidden;
+}
